[project]
name = "arc-virtual-cell-atlas-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.11.4",
    "fsspec>=2025.3.2",
    "gcsfs>=2025.3.2",
    "google-cloud-storage>=3.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.1",
    "notebook>=7.4.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "s3fs>=2025.3.2",
    "scanpy>=1.11.1",
]
